apps/soju/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soju
  labels:
    app.kubernetes.io/name: soju
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: soju
  ports:
    - name: irc
      protocol: TCP
      port: 6667
      targetPort: irc
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
